# trail-cartographer

./: .env.example  .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/ai/: client.py  markup.py  symbol_gen.py
backend/app/api/: markup.py  projects.py  render.py  symbols.py
backend/app/core/: cache.py  geodata.py  gpx.py  render.py
backend/app/models/: project.py
backend/backend/data/cache/: elev_46dd64b8f33e.json  nlcd_1a3dfa84691e.json  osm_b1ef687e53c2.json
backend/backend/data/projects/e1ece7c739d7/: manifest.json  source.gpx
backend/tests/: test_health.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AIChat.tsx  DrawingLayer.tsx  ExportDialog.tsx  MapCanvas.tsx  MapLibreCanvas.tsx  SymbolPalette.tsx  Toolbar.tsx
frontend/src/hooks/: useDraggable.ts  useMarkup.ts
frontend/src/store/: editor.ts
